--- a/VilniusCodingSchool2021Tests/VilniusCodingSchool2021Tests/VilniusCodingSchool2021Tests.csproj
+++ b/VilniusCodingSchool2021Tests/VilniusCodingSchool2021Tests/VilniusCodingSchool2021Tests.csproj
@@ -56,10 +56,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Drivers\Browsers.cs" />
+    <Compile Include="Drivers\CustomDrivers.cs" />
+    <Compile Include="NewTools\MyScreenshots .cs" />
     <Compile Include="Page\BasePage.cs" />
-    <Compile Include="Page\FinalProjectLoginPage.cs" />
+    <Compile Include="Page\VoverytesAccountRegisterPage.cs" />
+    <Compile Include="Page\VoverytesButikasLoginPage.cs" />
+    <Compile Include="Page\VoverytesItemCompareChartPage.cs" />
+    <Compile Include="Page\VoverytesMoreThan45EURPage.cs" />
+    <Compile Include="Page\VoverytesInsideChartPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Test\FinalProjectTest.cs" />
+    <Compile Include="Test\BaseTest.cs" />
+    <Compile Include="Test\VoverytesButikasTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
