--- a/VilniusCodingSchool2021Tests/VilniusCodingSchool2021Tests/packages.config
+++ b/VilniusCodingSchool2021Tests/VilniusCodingSchool2021Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="NUnit" version="3.13.2" targetFramework="net472" />
   <package id="NUnit3TestAdapter" version="4.1.0" targetFramework="net472" />
+  <package id="Premotion.AspNet.AppHarbor.Integration" version="0.5.0" targetFramework="net472" />
   <package id="Selenium.Firefox.WebDriver" version="0.27.0" targetFramework="net472" />
   <package id="Selenium.Support" version="4.0.1" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="4.0.1" targetFramework="net472" />
