--- a/VilniusCodingSchool2021Tests/VilniusCodingSchool2021Tests/VilniusCodingSchool2021Tests.csproj
+++ b/VilniusCodingSchool2021Tests/VilniusCodingSchool2021Tests/VilniusCodingSchool2021Tests.csproj
@@ -35,6 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Build.Engine" />
     <Reference Include="nunit.framework, Version=3.13.2.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.13.2\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
