Final VoverytesButikas version 2021.11.20

--- a/VilniusCodingSchool2021Tests/VilniusCodingSchool2021Tests/VilniusCodingSchool2021Tests.csproj
+++ b/VilniusCodingSchool2021Tests/VilniusCodingSchool2021Tests/VilniusCodingSchool2021Tests.csproj
@@ -74,7 +74,7 @@
     <Compile Include="Page\VoverytesInsideChartPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test\BaseTest.cs" />
-    <Compile Include="Test\VoverytesLoginTest.cs" />
+    <Compile Include="Test\VoverytesButikasTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
